# WoT-Phyng-Sim

./: docker-compose.yml
backend/proxy-server/: .env.local  Dockerfile  pyproject.toml  run.py
backend/proxy-server/main/: __init__.py  _app.py  _config.py  enums.py
backend/proxy-server/main/commons/: decorators.py  dependencies.py  error_handlers.py  exceptions.py
backend/proxy-server/main/controllers/: _router.py  case.py  probe.py
backend/proxy-server/main/engines/: bash.sh  case.py  phyng.py  phyng_prop.py  post_process.py
backend/proxy-server/main/libs/: log.py
backend/proxy-server/main/libs/paraview/lib/: hydra_nameserver  hydra_persist  libLLVMCore.so.7  libLLVMDebugInfoCodeView.so.7  libLLVMDebugInfoMSF.so.7  libLLVMExecutionEngine.so.7  libLLVMGlobalISel.so.7  libLLVMMCDisassembler.so.7  libLLVMObject.so.7  libLLVMSelectionDAG.so.7  libLLVMTarget.so.7  libLLVMX86AsmPrinter.so.7  libLLVMX86Desc.so.7  libLLVMX86Disassembler.so.7  libLLVMX86Info.so.7  libLLVMX86Utils.so.7  libXdmfCore.so.3  libavformat.so.55  libavutil.so.52  libboost_date_time.so.1.59.0  libboost_filesystem.so.1.59.0  libboost_iostreams.so.1.59.0  libboost_program_options.so.1.59.0  libboost_system.so.1.59.0  libboost_thread.so.1.59.0  libexpat.so.1  libfreetype.so.6  libhdf5.so.8.0.2  libhdf5_hl.so.8.0.2  liblas.so.3  liblas_c.so.3  libmpi.so.12  libmpicxx.so.12  libmpifort.so.12  libnetcdf.so.7.2.0  libospray.so.0  libospray_common.so.0  libpng16.so.16  libswscale.so.2  libsz.so.2  (+310 more)
backend/proxy-server/main/schemas/: base.py  case.py  common.py  exceptions.py
(+27 files in other folders)
