[tool.poetry]
name = "proxy-server"
version = "0.1.0"
description = ""
authors = ["GiaBao"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.111.0"
uuid = "^1.30"
httpx = "^0.27.0"
pydantic-settings = "^2.3.1"
greenlet = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
